# protobuf

./: BUILD  README.md
cmake/: libprotobuf-lite.cmake  tests.cmake
docs/: protoc.md
java/core/: pom.xml
js/: message.js
js/binary/: writer.js
protoc-artifacts/wasm/: CMakeLists.txt  README.md  build.sh  cmake.sh  index.html  index.js  package.json  post.sh  test.js  util.js  web.js
protoc-artifacts/wasm/src/: post.js  util.cc  util.pb.cc  util.pb.h  util.proto  wasm.cc
python/: setup.py
python/google/protobuf/: descriptor_pool.py  json_format.py  text_format.py
python/google/protobuf/internal/: descriptor_pool_test.py  descriptor_test.py  json_format_test.py  text_format_test.py
python/google/protobuf/pyext/: descriptor.cc  repeated_composite_container.cc  unknown_fields.cc  unknown_fields.h
src/: Makefile.am
src/google/protobuf/: any.pb.cc  any.pb.h  api.pb.cc  api.pb.h  arena.cc  arena.h  arenastring_unittest.cc  descriptor.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  descriptor.proto  duration.pb.cc  duration.pb.h  empty.pb.cc  empty.pb.h  field_mask.pb.cc  field_mask.pb.h  generated_message_reflection.cc  generated_message_reflection.h  generated_message_util.h  lite_unittest.cc  map.h  message.h  message_lite.cc  message_lite.h  message_unittest.cc  metadata.h  repeated_field.h  repeated_field_unittest.cc  source_context.pb.cc  source_context.pb.h  struct.pb.cc  struct.pb.h  text_format.cc  text_format.h  timestamp.pb.cc  timestamp.pb.h  type.pb.cc  type.pb.h  (+5 more)
src/google/protobuf/compiler/: code_generator.h  command_line_interface.cc  command_line_interface.h  command_line_interface_unittest.cc  importer.cc  mock_code_generator.cc  parser.cc  parser_unittest.cc  plugin.pb.cc  plugin.pb.h  profile.pb.cc  profile.pb.h
src/google/protobuf/compiler/cpp/: cpp_enum.cc  cpp_enum_field.cc  cpp_enum_field.h  cpp_field.cc  cpp_field.h  cpp_file.cc  cpp_helpers.cc  cpp_helpers.h  cpp_message.cc  (+9 more)
src/google/protobuf/stubs/: wasm.cc  wasm.h
src/google/protobuf/util/: message_differencer.cc  message_differencer.h  message_differencer_unittest.cc
(+34 files in other folders)
